// Vitest Snapshot v1

exports[`renders 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR eTvdtE gWKlTj"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR fmEPPj gWKlTj"
>
  foo
</button>
`;
